--- a/WebContent/Config.properties
+++ b/WebContent/Config.properties
@@ -1,5 +1,5 @@
-app42.paas.db.username = a3stfgw6skenu90l
-app42.paas.db.port = 33014
-app42.paas.db.password = 28zkhhz1fp47qp4770nf85p1teqkvvpc
+app42.paas.db.username = amu2vrt8s79jix20
+app42.paas.db.port = 33833
+app42.paas.db.password = ac2uj41v8gdkktidt8ef9y8zmqvo45rp
 app42.paas.db.ip = 10.0.2.12
-app42.paas.db.name = a_a
+app42.paas.db.name = t
