--- a/WebContent/Config.properties
+++ b/WebContent/Config.properties
@@ -1,5 +1,5 @@
-app42.paas.db.username = amu2vrt8s79jix20
-app42.paas.db.port = 33833
-app42.paas.db.password = ac2uj41v8gdkktidt8ef9y8zmqvo45rp
+app42.paas.db.username = a1sq1lqjcyn7dwb2
+app42.paas.db.port = 21987
+app42.paas.db.password = aozasvkmh7fu1xcie2gmihxuvb8iazhy
 app42.paas.db.ip = 10.0.2.12
 app42.paas.db.name = t
