--- a/WebContent/Config.properties
+++ b/WebContent/Config.properties
@@ -1,5 +1,5 @@
-app42.paas.db.username = a1sq1lqjcyn7dwb2
-app42.paas.db.port = 21987
-app42.paas.db.password = aozasvkmh7fu1xcie2gmihxuvb8iazhy
+app42.paas.db.username = auf26f3cyc808cgj
+app42.paas.db.port = 58091
+app42.paas.db.password = fz4gvihfraz1mx60h1y295hnr6t801ki
 app42.paas.db.ip = 10.0.2.12
 app42.paas.db.name = t
