--- a/WebContent/Config.properties
+++ b/WebContent/Config.properties
@@ -1,5 +1,5 @@
-app42.paas.db.username = auknsbfioy5h1bdl
-app42.paas.db.port = 4954
-app42.paas.db.password = aytvllqfjrqtnrujnxt96bz9rc7lbdua
-app42.paas.db.ip = 10.0.2.12
+app42.paas.db.username = aglj0u96k6eyd4bx
+app42.paas.db.port = 25300
+app42.paas.db.password = p0euovte0652uu3hsgqjoi4faiuadwyd
+app42.paas.db.ip = 172.16.2.167
 app42.paas.db.name = t
