--- a/WebContent/Config.properties
+++ b/WebContent/Config.properties
@@ -1,5 +1,5 @@
-app42.paas.db.username = aglj0u96k6eyd4bx
-app42.paas.db.port = 25300
-app42.paas.db.password = p0euovte0652uu3hsgqjoi4faiuadwyd
+app42.paas.db.username = a3q4tpvorm99gh7b
+app42.paas.db.port = 33177
+app42.paas.db.password = y16vncae4hnytfc8755htrpfmqrd9sgc
 app42.paas.db.ip = 172.16.2.167
 app42.paas.db.name = t
