--- a/WebContent/Config.properties
+++ b/WebContent/Config.properties
@@ -1,5 +1,5 @@
-app42.paas.db.username = agsqnvxy6oitxpvk
-app42.paas.db.port = 61105
-app42.paas.db.password = kao1ga2v9qtlrsi1l16pcf5yxe3oeyo2
+app42.paas.db.username = a8z5d291jl3pdx2h
+app42.paas.db.port = 38923
+app42.paas.db.password = wz4ntbx3n7urzd1ey9lbtvh5lfmgzq69
 app42.paas.db.ip = 172.16.2.167
 app42.paas.db.name = t
