--- a/WebContent/Config.properties
+++ b/WebContent/Config.properties
@@ -1,5 +1,5 @@
-app42.paas.db.username = avx6zpk3ub3ovwdx
-app42.paas.db.port = 58252
-app42.paas.db.password = ait2p2e53m1vf38pso8bg9hssveqkr5a
+app42.paas.db.username = ab3k7nips0xmd2dv
+app42.paas.db.port = 31912
+app42.paas.db.password = a88jj08de2ss3lrkds4d4domtsl1ns55
 app42.paas.db.ip = 172.16.2.167
 app42.paas.db.name = t
