--- a/WebContent/Config.properties
+++ b/WebContent/Config.properties
@@ -1,5 +1,5 @@
-app42.paas.db.username = ab3k7nips0xmd2dv
-app42.paas.db.port = 31912
-app42.paas.db.password = a88jj08de2ss3lrkds4d4domtsl1ns55
+app42.paas.db.username = aop7miqaagpxxq1j
+app42.paas.db.port = 31353
+app42.paas.db.password = autbhya03c659rm08omyxocljkh8ghbj
 app42.paas.db.ip = 172.16.2.167
 app42.paas.db.name = t
