--- a/WebContent/Config.properties
+++ b/WebContent/Config.properties
@@ -1,5 +1,5 @@
-app42.paas.db.username = a4s03tzt8f5pjwhe
-app42.paas.db.port = 24058
-app42.paas.db.password = jfry2t17a9iq2w3vxyynezikq0tul4xn
-app42.paas.db.ip = 172.16.2.167
+app42.paas.db.username = adlplrrpr4u41sm5
+app42.paas.db.port = 9878
+app42.paas.db.password = m58skb632bqk6xzxlf0xaurnrpznt93r
+app42.paas.db.ip = 54.213.93.154
 app42.paas.db.name = t
