--- a/WebContent/Config.properties
+++ b/WebContent/Config.properties
@@ -1,5 +1,5 @@
-app42.paas.db.username = adlplrrpr4u41sm5
-app42.paas.db.port = 9878
-app42.paas.db.password = m58skb632bqk6xzxlf0xaurnrpznt93r
-app42.paas.db.ip = 54.213.93.154
-app42.paas.db.name = t
+app42.paas.db.username = aerokx66w88ov9gx
+app42.paas.db.port = 32220
+app42.paas.db.password = az3gq4mn8h7m0afzdmok01uthqaelo8t
+app42.paas.db.ip = 192.168.2.202
+app42.paas.db.name = test
