--- a/WebContent/Config.properties
+++ b/WebContent/Config.properties
@@ -1,5 +1,5 @@
-app42.paas.db.username = aerokx66w88ov9gx
-app42.paas.db.port = 32220
-app42.paas.db.password = az3gq4mn8h7m0afzdmok01uthqaelo8t
-app42.paas.db.ip = 192.168.2.202
-app42.paas.db.name = test
+app42.paas.db.username = ar22km1s3pxyldwa
+app42.paas.db.port = 61745
+app42.paas.db.password = ak3c9qnafgsztjgk7edz4w94pxp84x3a
+app42.paas.db.ip = 192.168.2.53
+app42.paas.db.name = t
